# nettools

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: resources.qrc
src/: ProxyManager.cpp  ProxyManager.h  main.c  main.cpp  network_domain.c  network_ipv4.c  network_ipv6.c  network_tools.c  network_tools.h
